Fix experience 404 and header overlap layout issues

--- a/experience/style.css
+++ b/experience/style.css
@@ -157,7 +157,7 @@ header .navbar ul li a:hover{
 
 /* experience section starts */
 .experience {
-  margin-top: 5rem;
+  margin-top: 8rem;
 }
 .experience .quote {
   text-align: center;
