--- a/projects/style.css
+++ b/projects/style.css
@@ -159,7 +159,7 @@ header .navbar ul li a:hover{
 .work{
   /* background: #010124; */
   background: linear-gradient(to bottom, #010136, #00003a);
-  margin-top: 5rem;
+  margin-top: 8rem;
 }
 .work h2{
   color: #fff;
